text align fix 2

--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,7 @@ h1  {
 	color:#000
 	font-weight: bolder;
 	text-decoration: underline;
+	text-align: center;
 
 }
 
